# pikuma-3d-software-renderer

./: .gitignore  CMakeLists.txt  README.md  build.sh  combine.sh  compile_and_run.sh  install_deps.sh  todo.txt
assets/models/: f22.col  gba.col  gba.mtl  make_colors.py
src/: assets.c  assets.h  color_picker.c  colors.c  colors.h  draw.c  draw.h  draw_lib.c  draw_lib.h  globals.h  input.c  input.h  light.c  light.h  main.c  mat4.c  mat4.h  material.c  material.h  material_management.c  material_management.h  mesh.c  mesh.h  mesh_data.h  model.c  model.h  pixel_buffer.c  pixel_buffer.h  primitives.c  primitives.h  projection.c  projection.h  scenes.c  scenes.h  sfa.c  sfa.h  shape.h  state.c  state.h  step.c  (+16 more)
